lib/parser/JustMapParser.js
// Generated from D:\Code\github\justmap\lib\parser\JustMapParser.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var JustMapParserListener = require('./JustMapParserListener').JustMapParserListener;
var JustMapParserVisitor = require('./JustMapParserVisitor').JustMapParserVisitor;

var grammarFileName = "JustMapParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "':'", "'{'", "'('", "')'", "'in'", 
                     null, null, null, "'var'", "'++'", "'--'", null, null, 
                     "'='", null, null, null, "'!'", "';'", null, null, 
                     null, null, null, null, null, null, "'#if'", "'#for'", 
                     "'#foreach'", null, "'}'" ];

var symbolicNames = [ null, "HashSql", "HashInclude", "COLON", "OpenBrace", 
                      "OpenParen", "CloseParen", "IN", "BOOL", "STR", "NUM", 
                      "VAR", "INC", "DEC", "MULDIV", "ADDSUB", "EQUAL", 
                      "CMP", "AND", "OR", "NOT", "SEMICOLON", "BlockComment", 
                      "LineComment", "SqlId", "ID", "IDX", "SYNTAX", "WS", 
                      "HashSql0", "HashIf", "HashFor", "HashForeach", "HashInclude0", 
                      "CloseBrace", "Param", "NL", "TEXT" ];

var ruleNames =  [ "root", "sqlStatement", "sqlDeclare", "sqlBody", "sqlLine", 
                   "ifStatement", "ifDeclare", "forStatement", "forDeclare", 
                   "foreachStatement", "foreachDeclare", "inExpr", "indexExpr", 
                   "expr", "includeStatement", "colon", "openBrace", "closeBrace", 
                   "openParen", "closeParen", "sqlId", "param", "plainText", 
                   "nl", "eof" ];

function JustMapParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

JustMapParser.prototype = Object.create(antlr4.Parser.prototype);
JustMapParser.prototype.constructor = JustMapParser;

Object.defineProperty(JustMapParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

JustMapParser.EOF = antlr4.Token.EOF;
JustMapParser.HashSql = 1;
JustMapParser.HashInclude = 2;
JustMapParser.COLON = 3;
JustMapParser.OpenBrace = 4;
JustMapParser.OpenParen = 5;
JustMapParser.CloseParen = 6;
JustMapParser.IN = 7;
JustMapParser.BOOL = 8;
JustMapParser.STR = 9;
JustMapParser.NUM = 10;
JustMapParser.VAR = 11;
JustMapParser.INC = 12;
JustMapParser.DEC = 13;
JustMapParser.MULDIV = 14;
JustMapParser.ADDSUB = 15;
JustMapParser.EQUAL = 16;
JustMapParser.CMP = 17;
JustMapParser.AND = 18;
JustMapParser.OR = 19;
JustMapParser.NOT = 20;
JustMapParser.SEMICOLON = 21;
JustMapParser.BlockComment = 22;
JustMapParser.LineComment = 23;
JustMapParser.SqlId = 24;
JustMapParser.ID = 25;
JustMapParser.IDX = 26;
JustMapParser.SYNTAX = 27;
JustMapParser.WS = 28;
JustMapParser.HashSql0 = 29;
JustMapParser.HashIf = 30;
JustMapParser.HashFor = 31;
JustMapParser.HashForeach = 32;
JustMapParser.HashInclude0 = 33;
JustMapParser.CloseBrace = 34;
JustMapParser.Param = 35;
JustMapParser.NL = 36;
JustMapParser.TEXT = 37;

JustMapParser.RULE_root = 0;
JustMapParser.RULE_sqlStatement = 1;
JustMapParser.RULE_sqlDeclare = 2;
JustMapParser.RULE_sqlBody = 3;
JustMapParser.RULE_sqlLine = 4;
JustMapParser.RULE_ifStatement = 5;
JustMapParser.RULE_ifDeclare = 6;
JustMapParser.RULE_forStatement = 7;
JustMapParser.RULE_forDeclare = 8;
JustMapParser.RULE_foreachStatement = 9;
JustMapParser.RULE_foreachDeclare = 10;
JustMapParser.RULE_inExpr = 11;
JustMapParser.RULE_indexExpr = 12;
JustMapParser.RULE_expr = 13;
JustMapParser.RULE_includeStatement = 14;
JustMapParser.RULE_colon = 15;
JustMapParser.RULE_openBrace = 16;
JustMapParser.RULE_closeBrace = 17;
JustMapParser.RULE_openParen = 18;
JustMapParser.RULE_closeParen = 19;
JustMapParser.RULE_sqlId = 20;
JustMapParser.RULE_param = 21;
JustMapParser.RULE_plainText = 22;
JustMapParser.RULE_nl = 23;
JustMapParser.RULE_eof = 24;

function RootContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_root;
    return this;
}

RootContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootContext.prototype.constructor = RootContext;

RootContext.prototype.sqlStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SqlStatementContext);
    } else {
        return this.getTypedRuleContext(SqlStatementContext,i);
    }
};

RootContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterRoot(this);
	}
};

RootContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitRoot(this);
	}
};

RootContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitRoot(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.RootContext = RootContext;

JustMapParser.prototype.root = function() {

    var localctx = new RootContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, JustMapParser.RULE_root);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 53;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===JustMapParser.HashSql || _la===JustMapParser.HashSql0) {
            this.state = 50;
            this.sqlStatement();
            this.state = 55;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SqlStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_sqlStatement;
    return this;
}

SqlStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SqlStatementContext.prototype.constructor = SqlStatementContext;

SqlStatementContext.prototype.sqlDeclare = function() {
    return this.getTypedRuleContext(SqlDeclareContext,0);
};

SqlStatementContext.prototype.colon = function() {
    return this.getTypedRuleContext(ColonContext,0);
};

SqlStatementContext.prototype.sqlBody = function() {
    return this.getTypedRuleContext(SqlBodyContext,0);
};

SqlStatementContext.prototype.openBrace = function() {
    return this.getTypedRuleContext(OpenBraceContext,0);
};

SqlStatementContext.prototype.closeBrace = function() {
    return this.getTypedRuleContext(CloseBraceContext,0);
};

SqlStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterSqlStatement(this);
	}
};

SqlStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitSqlStatement(this);
	}
};

SqlStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitSqlStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.SqlStatementContext = SqlStatementContext;

JustMapParser.prototype.sqlStatement = function() {

    var localctx = new SqlStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, JustMapParser.RULE_sqlStatement);
    try {
        this.state = 65;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 56;
            this.sqlDeclare();
            this.state = 57;
            this.colon();
            this.state = 58;
            this.sqlBody();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 60;
            this.sqlDeclare();
            this.state = 61;
            this.openBrace();
            this.state = 62;
            this.sqlBody();
            this.state = 63;
            this.closeBrace();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SqlDeclareContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_sqlDeclare;
    return this;
}

SqlDeclareContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SqlDeclareContext.prototype.constructor = SqlDeclareContext;

SqlDeclareContext.prototype.sqlId = function() {
    return this.getTypedRuleContext(SqlIdContext,0);
};

SqlDeclareContext.prototype.HashSql = function() {
    return this.getToken(JustMapParser.HashSql, 0);
};

SqlDeclareContext.prototype.HashSql0 = function() {
    return this.getToken(JustMapParser.HashSql0, 0);
};

SqlDeclareContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterSqlDeclare(this);
	}
};

SqlDeclareContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitSqlDeclare(this);
	}
};

SqlDeclareContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitSqlDeclare(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.SqlDeclareContext = SqlDeclareContext;

JustMapParser.prototype.sqlDeclare = function() {

    var localctx = new SqlDeclareContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, JustMapParser.RULE_sqlDeclare);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        _la = this._input.LA(1);
        if(!(_la===JustMapParser.HashSql || _la===JustMapParser.HashSql0)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 68;
        this.sqlId();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SqlBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_sqlBody;
    return this;
}

SqlBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SqlBodyContext.prototype.constructor = SqlBodyContext;

SqlBodyContext.prototype.ifStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IfStatementContext);
    } else {
        return this.getTypedRuleContext(IfStatementContext,i);
    }
};

SqlBodyContext.prototype.forStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ForStatementContext);
    } else {
        return this.getTypedRuleContext(ForStatementContext,i);
    }
};

SqlBodyContext.prototype.foreachStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ForeachStatementContext);
    } else {
        return this.getTypedRuleContext(ForeachStatementContext,i);
    }
};

SqlBodyContext.prototype.includeStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IncludeStatementContext);
    } else {
        return this.getTypedRuleContext(IncludeStatementContext,i);
    }
};

SqlBodyContext.prototype.sqlLine = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SqlLineContext);
    } else {
        return this.getTypedRuleContext(SqlLineContext,i);
    }
};

SqlBodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterSqlBody(this);
	}
};

SqlBodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitSqlBody(this);
	}
};

SqlBodyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitSqlBody(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.SqlBodyContext = SqlBodyContext;

JustMapParser.prototype.sqlBody = function() {

    var localctx = new SqlBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, JustMapParser.RULE_sqlBody);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 75;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case JustMapParser.HashIf:
                this.state = 70;
                this.ifStatement();
                break;
            case JustMapParser.HashFor:
                this.state = 71;
                this.forStatement();
                break;
            case JustMapParser.HashForeach:
                this.state = 72;
                this.foreachStatement();
                break;
            case JustMapParser.HashInclude:
            case JustMapParser.HashInclude0:
                this.state = 73;
                this.includeStatement();
                break;
            case JustMapParser.Param:
            case JustMapParser.NL:
            case JustMapParser.TEXT:
                this.state = 74;
                this.sqlLine();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 77; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JustMapParser.HashInclude) | (1 << JustMapParser.HashIf) | (1 << JustMapParser.HashFor))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (JustMapParser.HashForeach - 32)) | (1 << (JustMapParser.HashInclude0 - 32)) | (1 << (JustMapParser.Param - 32)) | (1 << (JustMapParser.NL - 32)) | (1 << (JustMapParser.TEXT - 32)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SqlLineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_sqlLine;
    return this;
}

SqlLineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SqlLineContext.prototype.constructor = SqlLineContext;

SqlLineContext.prototype.nl = function() {
    return this.getTypedRuleContext(NlContext,0);
};

SqlLineContext.prototype.plainText = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PlainTextContext);
    } else {
        return this.getTypedRuleContext(PlainTextContext,i);
    }
};

SqlLineContext.prototype.param = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParamContext);
    } else {
        return this.getTypedRuleContext(ParamContext,i);
    }
};

SqlLineContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterSqlLine(this);
	}
};

SqlLineContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitSqlLine(this);
	}
};

SqlLineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitSqlLine(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.SqlLineContext = SqlLineContext;

JustMapParser.prototype.sqlLine = function() {

    var localctx = new SqlLineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, JustMapParser.RULE_sqlLine);
    var _la = 0; // Token type
    try {
        this.state = 96;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===JustMapParser.Param || _la===JustMapParser.TEXT) {
                this.state = 81;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case JustMapParser.TEXT:
                    this.state = 79;
                    this.plainText();
                    break;
                case JustMapParser.Param:
                    this.state = 80;
                    this.param();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 85;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 86;
            this.nl();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 89; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 89;
            		this._errHandler.sync(this);
            		switch(this._input.LA(1)) {
            		case JustMapParser.TEXT:
            		    this.state = 87;
            		    this.plainText();
            		    break;
            		case JustMapParser.Param:
            		    this.state = 88;
            		    this.param();
            		    break;
            		default:
            		    throw new antlr4.error.NoViableAltException(this);
            		}
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 91; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,7, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            this.state = 94;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
            if(la_===1) {
                this.state = 93;
                this.nl();

            }
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IfStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_ifStatement;
    return this;
}

IfStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatementContext.prototype.constructor = IfStatementContext;

IfStatementContext.prototype.ifDeclare = function() {
    return this.getTypedRuleContext(IfDeclareContext,0);
};

IfStatementContext.prototype.openBrace = function() {
    return this.getTypedRuleContext(OpenBraceContext,0);
};

IfStatementContext.prototype.sqlBody = function() {
    return this.getTypedRuleContext(SqlBodyContext,0);
};

IfStatementContext.prototype.closeBrace = function() {
    return this.getTypedRuleContext(CloseBraceContext,0);
};

IfStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterIfStatement(this);
	}
};

IfStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitIfStatement(this);
	}
};

IfStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitIfStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.IfStatementContext = IfStatementContext;

JustMapParser.prototype.ifStatement = function() {

    var localctx = new IfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, JustMapParser.RULE_ifStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 98;
        this.ifDeclare();
        this.state = 99;
        this.openBrace();
        this.state = 100;
        this.sqlBody();
        this.state = 101;
        this.closeBrace();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IfDeclareContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_ifDeclare;
    return this;
}

IfDeclareContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfDeclareContext.prototype.constructor = IfDeclareContext;

IfDeclareContext.prototype.HashIf = function() {
    return this.getToken(JustMapParser.HashIf, 0);
};

IfDeclareContext.prototype.openParen = function() {
    return this.getTypedRuleContext(OpenParenContext,0);
};

IfDeclareContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

IfDeclareContext.prototype.closeParen = function() {
    return this.getTypedRuleContext(CloseParenContext,0);
};

IfDeclareContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterIfDeclare(this);
	}
};

IfDeclareContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitIfDeclare(this);
	}
};

IfDeclareContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitIfDeclare(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.IfDeclareContext = IfDeclareContext;

JustMapParser.prototype.ifDeclare = function() {

    var localctx = new IfDeclareContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, JustMapParser.RULE_ifDeclare);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 103;
        this.match(JustMapParser.HashIf);
        this.state = 104;
        this.openParen();
        this.state = 105;
        this.expr(0);
        this.state = 106;
        this.closeParen();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ForStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_forStatement;
    return this;
}

ForStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForStatementContext.prototype.constructor = ForStatementContext;

ForStatementContext.prototype.forDeclare = function() {
    return this.getTypedRuleContext(ForDeclareContext,0);
};

ForStatementContext.prototype.openBrace = function() {
    return this.getTypedRuleContext(OpenBraceContext,0);
};

ForStatementContext.prototype.sqlBody = function() {
    return this.getTypedRuleContext(SqlBodyContext,0);
};

ForStatementContext.prototype.closeBrace = function() {
    return this.getTypedRuleContext(CloseBraceContext,0);
};

ForStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterForStatement(this);
	}
};

ForStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitForStatement(this);
	}
};

ForStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitForStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.ForStatementContext = ForStatementContext;

JustMapParser.prototype.forStatement = function() {

    var localctx = new ForStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, JustMapParser.RULE_forStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.forDeclare();
        this.state = 109;
        this.openBrace();
        this.state = 110;
        this.sqlBody();
        this.state = 111;
        this.closeBrace();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ForDeclareContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_forDeclare;
    return this;
}

ForDeclareContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForDeclareContext.prototype.constructor = ForDeclareContext;

ForDeclareContext.prototype.HashFor = function() {
    return this.getToken(JustMapParser.HashFor, 0);
};

ForDeclareContext.prototype.openParen = function() {
    return this.getTypedRuleContext(OpenParenContext,0);
};

ForDeclareContext.prototype.indexExpr = function() {
    return this.getTypedRuleContext(IndexExprContext,0);
};

ForDeclareContext.prototype.closeParen = function() {
    return this.getTypedRuleContext(CloseParenContext,0);
};

ForDeclareContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterForDeclare(this);
	}
};

ForDeclareContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitForDeclare(this);
	}
};

ForDeclareContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitForDeclare(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.ForDeclareContext = ForDeclareContext;

JustMapParser.prototype.forDeclare = function() {

    var localctx = new ForDeclareContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, JustMapParser.RULE_forDeclare);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.match(JustMapParser.HashFor);
        this.state = 114;
        this.openParen();
        this.state = 115;
        this.indexExpr();
        this.state = 116;
        this.closeParen();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ForeachStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JustMapParser.RULE_foreachStatement;
    return this;
}

ForeachStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForeachStatementContext.prototype.constructor = ForeachStatementContext;

ForeachStatementContext.prototype.foreachDeclare = function() {
    return this.getTypedRuleContext(ForeachDeclareContext,0);
};

ForeachStatementContext.prototype.openBrace = function() {
    return this.getTypedRuleContext(OpenBraceContext,0);
};

ForeachStatementContext.prototype.sqlBody = function() {
    return this.getTypedRuleContext(SqlBodyContext,0);
};

ForeachStatementContext.prototype.closeBrace = function() {
    return this.getTypedRuleContext(CloseBraceContext,0);
};

ForeachStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.enterForeachStatement(this);
	}
};

ForeachStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof JustMapParserListener ) {
        listener.exitForeachStatement(this);
	}
};

ForeachStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JustMapParserVisitor ) {
        return visitor.visitForeachStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JustMapParser.ForeachStatementContext = ForeachStatementContext;

JustMapParser.prototype.foreachStatement = function() {
